--- a/style.css
+++ b/style.css
@@ -187,39 +187,6 @@
 
 }
 
-.icons-2 ul{
-
-    position: absolute;
-    left: 75.6%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-
-}
-
-.icons-2 ul li{
-
-    list-style: none;
-    margin-left: 8px;
-
-}
-
-.icons-2 ul li .fa-brands{
-
-    font-size: 22px;
-    color: black;
-    transition: color 1s;
-    /* padding-top: 5110px; */
-    margin-top: 311rem;
-    padding-left: 9px;
-
-}
-
-.icons-2 .fa-brands:hover{
-
-    color: red;
-
-}
 
 .p{
 
@@ -228,17 +195,27 @@
 
 }
 
-.icons-1 ul li{
+td{
 
-    list-style-type: none;
-    display: inline-block;
-    position: relative;
-    top: 20px;
-    
+    padding-top: 10px;
 
 }
 
-.icons-1 ul li a{
+td .fa-brands{
+
+    font-size: 20px;
+    margin-right: 15px;
+
+}
+
+/* .icons-1 , .icons-2{
+
+    padding-top: 10px;
+
+
+} */
+
+.icons-1 a{
 
     color: black;
 
